--- a/includes/ou_profile_styles.css
+++ b/includes/ou_profile_styles.css
@@ -481,7 +481,15 @@ body.dark ul.ou-sections li.myprofile a {
   border-color: #222;
 }
 
+.ou-profile-pims-link {
+	color: #fff;
+	margin: 0.5em;
+	padding: 0.5em;
+	background-color: #990000;
+}
 
+
+/* Editing options */
 .form-item {
   margin-left: 0.2em;
   margin-right: 0.2em;
@@ -509,7 +517,18 @@ body.dark ul.ou-sections li.myprofile a {
 
 .ou-field > .field-type-node-reference
 {
+  clear: both;
   float:right;
+  width: 100%;
+}
+.ou-field > .field-type-node-reference .form-item.form-type-radios {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+/* RPS data table */
+.profile_research_groups {
+  clear: both;
+  display: block;
 }
 
 .form-textarea-wrapper {
@@ -517,7 +536,7 @@ body.dark ul.ou-sections li.myprofile a {
 }
 
 .form-type-textarea{
-  background-color:rgba(239, 240, 232, 0.6);
+  background-color: #f3f3f3;
 }
 .text-format-wrapper
 {
@@ -530,8 +549,8 @@ body.dark ul.ou-sections li.myprofile a {
 }
 
 .field-group-div{
-  background-color:rgba(239, 240, 232, 0.6)
-}
+  background-color: #f3f3f3;
+ }
 
 /* List formatting */
 
@@ -582,6 +601,18 @@ body.dark ul.ou-sections li.myprofile a {
   float: right;
   display: inline-block;
   padding: 0 30px 0 0;
+}
+
+.view-filters form {
+  margin-left: 20px;
+}
+
+h2.ou_profile_faculty_heading {
+  margin-left: 30px;
+}
+
+h3.ou_profile_dept_heading {
+  margin-left: 60px;
 }
 
 .cdontent .list-items ul.ou_profile_names li a {
